--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -129,6 +129,7 @@
         </div>
     {% endif %}
 {% endif %}
+
 {# ======= Check MODFLOW Model Instance content files =======#}
 {% if cm.resource_type == "MODFLOWModelInstanceResource" %}
     {% if self_access_level == 'owner' or self_access_level == 'edit' %}
@@ -163,7 +164,7 @@
 <div class="col-xs-12">
     {% if not resource_edit_mode %}
         <h2 id="resource-title">{{ title }}</h2>
-        <hr>
+        <hr/>
         {% if tool_homepage_url %}
             <span id="apps-dropdown"/>
             <a class='btn btn-primary' href="{{ tool_homepage_url }}" target="_blank">Open Web App</a>
@@ -189,28 +190,28 @@
                         </li>
                     {% endif %}
                 {% endfor %}
-
             </ul>
         {% endif %}
     {% else %}
         </div>
+        {# ======= Communities ======= #}
         {% if communities_enabled %}
-
             <div class="modal fade" id="title-modal" tabindex="-1" role="dialog" aria-labelledby="Title Assistant">
                 <div class="modal-dialog" role="document">
                     <div id="title-assistant" class="modal-content">
-{#                        <div class="modal-header">#}
-{#                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span#}
-{#                                    aria-hidden="true">&times;</span></button>#}
-{#                            <h4 class="modal-title" id="myModalLabel">Title Assistant</h4>#}
-{#                        </div>#}
+                        {#                        <div class="modal-header">#}
+                        {#                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span#}
+                        {#                                    aria-hidden="true">&times;</span></button>#}
+                        {#                            <h4 class="modal-title" id="myModalLabel">Title Assistant</h4>#}
+                        {#                        </div>#}
                         <div class="modal-body">
                             <div>
-                                <textarea id="resource-title" v-model="title" disabled rows="3"
-                                          style="width: 100%; margin-bottom: 1em; cursor: not-allowed;"
-                                            placeholder="start selecting items to build title">
-                                </textarea>
-                                <select id="czselect" v-model="regionSelected" @change="updateTitle()" style="margin-bottom: 1em; cursor: pointer;">
+                        <textarea id="resource-title" v-model="title" disabled rows="3"
+                                  style="width: 100%; margin-bottom: 1em; cursor: not-allowed;"
+                                  placeholder="start selecting items to build title">
+                        </textarea>
+                                <select id="czselect" v-model="regionSelected" @change="updateTitle()"
+                                        style="margin-bottom: 1em; cursor: pointer;">
                                     <option disabled value="">Select Critical Zone Region</option>
                                     <option>BCCZO</option>
                                     <option>CCZO</option>
@@ -228,20 +229,26 @@
                                        moved-item-location="bottom" v-on:item-moved="itemMoved" v-cloak>
                                 </mover>
                                 <a style="cursor:help" title="To add Topics make a request to admin@criticalzone.org"
-                                   href="mailto:admin@criticalzone.org?subject=New%20HydroShare%20Topic">E-mail admin to add a new topic</a><br/>
+                                   href="mailto:admin@criticalzone.org?subject=New%20HydroShare%20Topic">E-mail admin to
+                                    add a new topic</a><br/>
 
-                                <input class="title-builder-input" id="resource-subtopic" v-model="subtopic" v-on:keyup="updateTitle()" size="51"
-                                       maxlength="50" placeholder="Optional Custom Text" /><br />
-                                <input type="text" maxlength="4" class="title-builder-input" id="start-year" v-model="startYear" v-on:keyup="updateTitle()" placeholder="Start Year" />
-                                <input type="text" maxlength="7" class="title-builder-input" id="end-year" v-model="endYear" v-on:keyup="updateTitle()" placeholder="End Year" />
-                                <input type="checkbox" name="end-date-ongoing" v-model="yearOngoing" true-value="Ongoing" false-value="" @change="checkOngoing()">&nbsp;Ongoing<br>
-                                <input class="title-builder-input" id="title-location" v-model="location" v-on:keyup="updateTitle()" size="51"
+                                <input class="title-builder-input" id="resource-subtopic" v-model="subtopic"
+                                       v-on:keyup="updateTitle()" size="51"
+                                       maxlength="50" placeholder="Optional Custom Text"/><br/>
+                                <input type="text" maxlength="4" class="title-builder-input" id="start-year"
+                                       v-model="startYear" v-on:keyup="updateTitle()" placeholder="Start Year"/>
+                                <input type="text" maxlength="7" class="title-builder-input" id="end-year"
+                                       v-model="endYear" v-on:keyup="updateTitle()" placeholder="End Year"/>
+                                <input type="checkbox" name="end-date-ongoing" v-model="yearOngoing"
+                                       true-value="Ongoing" false-value="" @change="checkOngoing()">&nbsp;Ongoing<br>
+                                <input class="title-builder-input" id="title-location" v-model="location"
+                                       v-on:keyup="updateTitle()" size="51"
                                        maxlength="50" placeholder="Location" v-on:keyup="updateTitle()"/>
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <span style="color:red; float:left">{% templatetag openvariable %}
-                                            errmsg {% templatetag closevariable %}</span>
+                    <span style="color:red; float:left">{% templatetag openvariable %}
+                                    errmsg {% templatetag closevariable %}</span>
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                             <button type="button" v-on:click="saveTitle()" class="btn btn-primary">Save changes</button>
                         </div>
@@ -254,18 +261,20 @@
                 const topics_from_page = JSON.parse("{{ topics_json }}");
             </script>
             <script src="{{ STATIC_URL }}js/dual-listbox.js"></script>
+
         {% endif %}
+
         <form action="/hsapi/_internal/{{ cm.short_id }}/title/{{ cm.metadata.title.id }}/update-metadata/"
               id="id-title"
               method="post">
             {% csrf_token %}
             <fieldset>
                 <div id="div_id_value" class="control-group">
-                    <div class="controls"><input class="form-control input-sm textinput textInput"
-                                                 id="txt-title"
-                            {% if communities_enabled and czo_user %} onclick="titleClick()" {% endif %}
-                                                 maxlength="300" name="value" type="text"
-                                                 value="{{ cm.metadata.title }}"></div>
+                    <div class="controls">
+                        <input class="form-control input-sm textinput textInput" id="txt-title"
+                                {% if communities_enabled and czo_user %} onclick="titleClick()" {% endif %}
+                               maxlength="300" name="value" type="text" value="{{ cm.metadata.title }}"/>
+                    </div>
                 </div>
                 <div>
                     <button type="button" id="title-save-button" class="btn btn-primary pull-right btn-form-submit"
@@ -282,20 +291,23 @@
 {% if is_replaced_by %}
     <div class="col-xs-12">
         <div class="clear-fix"><i>A newer version of this resource <a
-                href="{{ is_replaced_by }}">{{ is_replaced_by }}</a> is available that replaces this version.</i></div>
+                href="{{ is_replaced_by }}">{{ is_replaced_by }}</a> is available that replaces this version.</i>
+        </div>
     </div>
 {% endif %}
 {% if is_version_of %}
     <div class="col-xs-12">
         <div class="clear-fix"><i>An older version of this resource <a
-                href="{{ is_version_of }}">{{ is_version_of }}</a> is available.</i></div>
+            href="{{ is_version_of }}">{{ is_version_of }}</a> is available.</i>
+        </div>
     </div>
 {% endif %}
 
 {% if cm.resource_type == "ToolResource" and cm.metadata.approved %}
     <div class="col-xs-12">
         <div class="clear-fix"><img class="app-approved-icon-img" src="/static/img/approved_app.png"><i>This WebApp
-            resource has been approved by HydroShare admin.</i></div>
+            resource has been approved by HydroShare admin.</i>
+        </div>
     </div>
 {% endif %}
 
@@ -311,15 +323,9 @@
             .title-builder-input {
                 margin-top: 1em;
             }
-
         </style>
-
-        {#    <script type="text/javascript" src="{{ STATIC_URL }}js/topics.js"></script> this is for the edit part TODO move this#}
         <script src="{{ STATIC_URL }}js/Sortable.min.js"></script>
         <script src="{{ STATIC_URL }}js/vue-mover.js"></script>
-        {#    <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.3.0.2.css">#}
-        {#    <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap-select-1.6.3.min.css"/>#}
-
     {% endblock %}
 {% endif %}
 
