Update appearance of communities notice

--- a/hs_communities/templates/hs_communities/find-communities.html
+++ b/hs_communities/templates/hs_communities/find-communities.html
@@ -24,10 +24,11 @@
                 {#                <a class="btn btn-success" data-toggle="modal" data-target="#create-group-dialog" disabled><i class="fa fa-plus"></i> Create Community</a>#}
                 <div class="col-xs-12">
                     <div id="missing-metadata-or-file"
-                         class="alert alert-success alert-dismissible"
+                         class="alert alert-info alert-dismissible"
                          role="alert">
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
                                 aria-hidden="true">&times;</span></button>
+                        <i class="glyphicon glyphicon-info-sign" style="margin-right: 20px;"></i>
                         Communities are a new feature in HydroShare. For more information about creating one please
                         contact CUAHSI
                     </div>
