--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -206,10 +206,10 @@
                         {#                        </div>#}
                         <div class="modal-body">
                             <div>
-                        <textarea id="resource-title" v-model="title" disabled rows="3"
-                                  style="width: 100%; margin-bottom: 1em; cursor: not-allowed;"
-                                  placeholder="start selecting items to build title">
-                        </textarea>
+                                <textarea id="resource-title" v-model="title" disabled rows="3"
+                                          style="width: 100%; margin-bottom: 1em; cursor: not-allowed;"
+                                          placeholder="start selecting items to build title">
+                                </textarea>
                                 <select id="czselect" v-model="regionSelected" @change="updateTitle()"
                                         style="margin-bottom: 1em; cursor: pointer;">
                                     <option disabled value="">Select Critical Zone Region</option>
@@ -247,9 +247,9 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                    <span style="color:red; float:left">{% templatetag openvariable %}
+                            <span style="color:red; float:left">{% templatetag openvariable %}
                                     errmsg {% templatetag closevariable %}</span>
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                             <button type="button" v-on:click="saveTitle()" class="btn btn-primary">Save changes</button>
                         </div>
                     </div>
