Add word break to resource specific content

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1108,8 +1108,9 @@ table.info-table {
     display: none;
 }
 
-#resourceSpecificTab{
-    overflow-x:hidden;
+#resourceSpecificTab {
+	overflow-x: hidden;
+	word-break: break-word;
 }
 
 #variables .custom-well {
