--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -186,7 +186,7 @@
                     <div class="controls"><input class="form-control input-sm textinput textInput"
                                                  id="txt-title"
                                                  maxlength="300" name="value" type="text"
-                                                 value="{{ cm.metadata.title }}"></div>
+                                                 value="{{ cm.metadata.title.value }}"></div>
                 </div>
                 <div>
                     <button type="button" class="btn btn-primary pull-right btn-form-submit"
