--- a/theme/templates/pages/group.html
+++ b/theme/templates/pages/group.html
@@ -622,7 +622,7 @@
                                             {# Title #}
                                             <td>
                                                 <strong>
-                                                    <a href="{{ res.get_absolute_url }}">{{ res.metadata.title }}</a>
+                                                    <a href="{{ res.get_absolute_url }}">{{ res.metadata.title.value }}</a>
                                                 </strong>
                                             </td>
                                             {# First Author #}
