--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -289,7 +289,7 @@
                                                     <div class="shared-resource-info">
                                                         <strong>{{ profile_user|contact }}</strong>
                                                         <span class="text-muted"> shared </span>
-                                                        <span><a href="{{ res.get_absolute_url }}">{{ res.metadata.title.value }}</a></span>
+                                                        <span><a href="{{ res.get_absolute_url }}">{{ res.metadata.title }}</a></span>
                                                     </div>
                                                     <h5><span class="text-muted">Resource type: </span>{{ res|resource_type }}</h5>
                                                     <h5><span class="text-muted">Date: </span>{{ res.created }}</h5>
