--- a/hs_communities/templates/hs_communities/community.html
+++ b/hs_communities/templates/hs_communities/community.html
@@ -95,7 +95,7 @@
                                             <input id="resource-search-input" type="text" class="form-control"
                                                    placeholder="Search" size="600px"/>
                                             <span id="btn-clear-search-input"
-                                                  class="glyphicon glyphicon-remove-sign btn-clear-search"></span>
+                                                  class="glyphicon glyphicon-remove-sign btn-clear-search" style="right: 10px"></span>
                                         </div>
                                     </div>
                                 </div>
@@ -198,8 +198,8 @@
                     <div role="tabpanel" class="tab-pane fade in" id="admin">
                         <div class="row">
                             <div class="col-sm-12 col-md-3">
-                                <a href="/topics/">Edit Topics</a>
-                                - Someone has requested a topic to be created or modified for use in the Title Assistant
+                                <a style="text-decoration: none;" href="/topics/"><h4><span style="::before" class="glyphicon glyphicon-pencil"></span>&nbsp;Edit Topics</h4></a>
+                                Someone has requested a topic to be created or modified for use in the Title Assistant
                             </div>
                         </div>
                     </div>
