--- a/hs_communities/templates/hs_communities/my-communities.html
+++ b/hs_communities/templates/hs_communities/my-communities.html
@@ -2,6 +2,8 @@
 
 {% load hydroshare_tags %}
 
+{% block meta_title %}My Communities {% endblock %}
+
 {% block main %}
     <div class="collaborate-header">
         <div class="container">
