--- a/hs_communities/templates/hs_communities/find-communities.html
+++ b/hs_communities/templates/hs_communities/find-communities.html
@@ -2,6 +2,8 @@
 
 {% load hydroshare_tags %}
 
+{% block meta_title %}Find Communities {% endblock %}
+
 {% block main %}
 
     <div class="collaborate-header">
@@ -22,7 +24,7 @@
             <div class="col-sm-12">
                 <h2 class="page-title">Find Communities</h2>
                 {#                <a class="btn btn-success" data-toggle="modal" data-target="#create-group-dialog" disabled><i class="fa fa-plus"></i> Create Community</a>#}
-                <div class="col-xs-12">
+                <div>
                     <div id="missing-metadata-or-file"
                          class="alert alert-info alert-dismissible"
                          role="alert">
