Update communities icon

--- a/hs_core/templates/pages/collaborate.html
+++ b/hs_core/templates/pages/collaborate.html
@@ -18,7 +18,7 @@
                 <div style="clear: both"></div>
                 <div style="float: left; margin-right: 2em;">
                 <a style="text-decoration: none" href="{% url 'communities' %}"><img
-                        src="{{ STATIC_URL }}/img/communities/communities.jpg"><h4>COMMUNITIES</h4></a></div>
+                        src="{{ STATIC_URL }}img/communities.png"><h4>COMMUNITIES</h4></a></div>
                 <div style="width: 600px; padding-top:1em;">
                 A Community is a collection of Groups that have something in common like being members of a large
                 research network. Communities are designed around public data sharing and open access
